PIC-3036: fixed security issue with nonce not being generated per request and implemented notification text preview

--- a/server/views/case-list.njk
+++ b/server/views/case-list.njk
@@ -198,7 +198,7 @@
     {% if params.notification and params.notification | length %}
         {% from "govuk/components/notification-banner/macro.njk" import govukNotificationBanner %}
         {{ govukNotificationBanner({
-            html: "<span class='govuk-notification-banner__heading'>" + params.notification | escape + "</span>"
+            html: "<span class='govuk-notification-banner__heading'>" + params.notification | safe + "</span>"
         }) }}
     {% endif %}
     {% if  params.caseSearchEnabled %}
