--- a/server/views/set-notification.njk
+++ b/server/views/set-notification.njk
@@ -1,3 +1,7 @@
+{% block javascripts %}
+    <script type="text/javascript" src="/javascripts/set-notification-{{ appVersion }}.min.js" nonce="{{ nonce }}"></script>
+{% endblock %}
+
 {% extends "partials/layout.njk" %}
 
 {% set title = "Set notification" %}
@@ -5,16 +9,11 @@
 {% block navigation %}{% endblock %}
 {% block cookieBanner %}{% endblock %}
 {% block content %}
-<form name="notificationForm" id="notificationForm" method="post" novalidate>
+<form name="notificationForm" id="notificationForm" class="hide-errors" method="post" novalidate>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      {% if currentNotification | length %}
-        {% from "govuk/components/notification-banner/macro.njk" import govukNotificationBanner %}
-        {{ govukNotificationBanner({
-          html: "<span class='govuk-notification-banner__heading'>" + currentNotification | escape + "</span>"
-        }) }}
-      {% endif %}
+      <iframe id="render" aria-label="render-preview" data-cy="render-frame" style="border: none; width: 100%;" src="/set-notification-preview"></iframe>
 
       <h1 class="govuk-heading-l">Set notification banner</h1>
       <p class="govuk-body">This will display a notification banner on the main case list page for all users.</p>
@@ -27,10 +26,17 @@
 
       {% from "govuk/components/input/macro.njk" import govukInput %}
       {{ govukInput({
-        label: { text: "Notification banner text" },
+        label: { text: "Notification banner html" },
+        attributes: {
+          "data-cy": "notification-input"
+        },
         id: "notification",
         name: "notification",
-        value: currentNotification
+        value: currentNotification,
+          errorMessage: {
+            html: "FIX THE ERROR MESSAGE BELOW.<br /><span class='govuk-!-font-size-16'>Once this is done you will be able to click the submit button.</span><br /><br /><span id='notification-error-text'></span>",
+            classes: "govuk-!-display-none"
+          }
       }) }}
 
       {% from "govuk/components/select/macro.njk" import govukSelect %}
@@ -73,7 +79,7 @@
         ]
       }) }}
 
-      <button type="submit" class="govuk-button">Set notification text</button>
+      <button type="submit" class="govuk-button" data-cy="notification-submit">Set notification html</button>
 
     </div>
   </div>
